# CISC-simulator

./: CMakeLists.txt  README.md  assember_test.cpp  codegenerator.cpp  codegenerator.h  command.h  commands.cpp  commands.h  fileworker.cpp  fileworker.h  hello_test.cpp  info.cpp  info.h  int24_t.cpp  int24_t.h  main.cpp  myerror.cpp  myerror.h  simulator.cpp  simulator.h  syntaxanalyzer.cpp  syntaxanalyzer.h  syntaxerror.h
services/: CMakeLists.txt  fileworker.cpp  info.h  int24_t.cpp  myerror.h
simulator/: CMakeLists.txt  simulator.cpp  simulator.h
test_cases/: Label_MustNotStartWithDigit.txt  TestProgram_Test1.txt
tests/: CMakeLists.txt  Label_Correct.txt  Register_MustBeNumber.txt  assember_test.cpp
tests/example_programs/: ADC.txt  JMA_good.txt  JMA_infiniteLoop.txt  JMNE_good.txt  JMNE_infiniteLoop.txt  add_XADD_pure.txt  add_XADD_stack.txt  cmp_JE.txt  cmp_JL.txt  count10_ADD_pure.txt  count10_ADD_stack.txt  count10_DEC_pure.txt  count10_DEC_stack.txt  div-_IDIV_pure.txt  div2_IDIV_pure.txt  div2_IDIV_stack.txt  neg_NEG_pure.txt  neg_NEG_stack.txt  or_OR_pure.txt  or_OR_stack.txt  shl_SHL_pure.txt  shl_SHL_stack.txt
tests/test_cases/: Label_AlreadyExists.txt  Label_InvalidCharacter.txt  Label_NameIsToLong.txt  Label_ToManyLabels.txt  Opcode_Unknown.txt  Register_OutOfRange.txt
translator/: CMakeLists.txt  codegenerator.cpp  command.h  commands.cpp  commands.h  syntaxanalyzer.cpp
